made the horizontal scroll in discover, added top rated category in browse and fixed navigation for trending and top rated from discover to browse

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    
 }
 
 html, body {
@@ -8,6 +9,7 @@ html, body {
     background-image: linear-gradient(0deg, rgb(8, 3, 14) 0%, rgba(6, 1, 10, 0.463) 30%, rgb(2, 1, 3) 100%);
     background-color: rgba(0, 0, 0, 0.73);
     font-family: 'Roboto', sans-serif;
+    
 }
 
 
@@ -236,10 +238,7 @@ body {
 
 
 
-.discover-page-div {
-    margin-top: 5vh;
-    width: 100vw;
-}
+
 
 .login-form-page {
    height: 100vh;
@@ -381,13 +380,122 @@ body {
     
 }
 
+.discover-page-div {
+    margin-top: 5vh;
+    
+}
+
+.discover-page-slide-wrapper {
+    overflow: hidden;
+    display: flex;
+    position: relative;
+    background-color: rgba(22, 3, 53, 0.63);
+}
+
+.discover-carousel-arrow-div {
+    
+    display: flex;
+    width: 83vw;
+    color: white;
+    height: 100px;
+    margin-left: 280px;
+    padding: 0px 500px;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.discover-carousel-arrow-div > img {
+    border-radius: 10px;
+    filter: invert(60%) sepia(19%) saturate(5586%) hue-rotate(157deg) brightness(100%) contrast(108%);
+    background-color: rgba(22, 3, 53, 0.43);
+    position: relative;
+    height: 120px;
+    max-width: 200px;
+    margin-top: 20px;
+    padding: 20px 20px;
+    transition: ease-in-out 0.2s;
+    cursor: pointer;
+    
+}
+
+.discover-carousel-arrow-div > img:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+    margin: 0;
+}
+
+.category-elements-div {
+    /*background-color: black;*/
+    position: relative;
+    display: flex;
+    overflow: visible;
+    align-items: center;
+    color: white;
+    font-style: italic;
+    gap: 20px 35px;
+    padding: 20px 40px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+    margin-left: 260px;
+    border-radius: 10px;
+    margin-right: 1vw;
+}
+
+
+
+
+
+.discover-movie-element-div {
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    padding-top: 100%;
+    font-weight: 300;
+    border-radius: 10px;
+    height: 50vh;
+    width: 15vw;
+    transition: ease-in-out 0.2s;
+    cursor: pointer;
+    
+}
+
+.discover-movie-element-div:hover {
+    opacity: 0.8;
+    color:#ff0000;
+    
+    font-weight: 700;
+    transform: scale(1.1);
+    margin: 0;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
+
+
+
+
 .category-div.action{
+    display: flex;
+    justify-content: space-between;
+    
+    align-items: center;
+    color: white;
+    margin-left: 280px;
+    margin-top: 5vh;
+}
+
+.category-elements-div.action{
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: white;
-    margin-left: 280px;
-    margin-top: 10vh;
 }
 
 .category-div.search{
@@ -626,7 +734,6 @@ body {
     flex-direction: column;
     align-items: start;
     padding-left: 300px;
-    
     padding-top: 0;
     padding-bottom: 700px;
     justify-content: space-around;
